Fix problems with immutable strings

--- a/test/hg38/tracks.conf
+++ b/test/hg38/tracks.conf
@@ -2,6 +2,7 @@
 urlTemplate=bigMaf.bb
 type=MAFViewer/View/Track/MAF
 storeClass=MAFViewer/Store/SeqFeature/BigMaf
+samples+=hg38
 samples+=canFam3
 samples+=rheMac3
 samples+=panTro4
