--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,7 @@
 {
+  "parser": "babel-eslint",
   "extends": "eslint-config-airbnb-es5",
+  "plugins": [],
   "rules": {
     "no-var": 0,
     "no-console": 0,
@@ -10,7 +12,15 @@
     "no-unused-vars": [2, {"varsIgnorePattern": "profile"}],
     "vars-on-top": 0,
     "prefer-arrow-callback": 0,
-    "func-names": 0
+    "func-names": 0,
+    "valid-jsdoc": 0,
+    "no-param-reassign": 0,
+    "eqeqeq": 0,
+    "no-undefined": 0,
+    "no-nested-ternary": 0,
+    "one-var": 0,
+    "new-cap": 0,
+    "camelcase": 0
   },
   "globals": {
     "$": true,
@@ -19,9 +29,13 @@
     "dojo": true,
     "dijit": true,
     "define": true,
-    "require": true
+    "require": true,
+    "describe": true,
+    "it": true
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "amd": true,
+    "es6": true
   }
 }
